# OmniVEngine

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  gen.bat  libpaths.cmake
libs/pugixml/scripts/vs2019/x64_Debug/: pugixml_debug.lib  pugixml_vs2019.vcxproj.FileListAbsolute.txt
libs/pugixml/scripts/vs2019/x64_Debug/pugixml_vs2019.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2019.lastbuildstate
libs/pugixml/scripts/vs2019/x64_Release/: pugixml_release.lib  pugixml_vs2019.vcxproj.FileListAbsolute.txt
libs/pugixml/scripts/vs2019/x64_Release/pugixml_vs2019.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2019.lastbuildstate
libs/pugixml/scripts/vs2022/x64_Debug/: pugixml_debug.lib  pugixml_vs2022.vcxproj.FileListAbsolute.txt
libs/pugixml/scripts/vs2022/x64_Debug/pugixml_vs2022.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2022.lastbuildstate
libs/pugixml/scripts/vs2022/x64_Release/: pugixml.lib  pugixml_release.lib  pugixml_vs2022.vcxproj.FileListAbsolute.txt
libs/pugixml/scripts/vs2022/x64_Release/pugixml_vs2022.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  pugixml_vs2022.lastbuildstate
scenes/: bunny.xml  testScene.xml
shaders/: offscreen.vert  pointLightBillboard.frag  pointLightBillboard.vert  scene.frag  scene.vert  simpleShader.frag  simpleShader.vert
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  EngineApp.cpp  EngineApp.hpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  OmniVBuffer.cpp  OmniVBuffer.hpp  OmniVCamera.cpp  OmniVCamera.hpp  OmniVDescriptors.cpp  OmniVDescriptors.hpp  OmniVDevice.cpp  OmniVDevice.hpp  OmniVEngineApp.cpp  OmniVEngineApp.hpp  OmniVFrameInfo.hpp  OmniVGameObject.cpp  OmniVGameObject.hpp  OmniVKeyboardMovementController.cpp  OmniVKeyboardMovementController.hpp  OmniVModel.cpp  OmniVModel.hpp  OmniVOffscreenRenderer.cpp  OmniVOffscreenRenderer.hpp  OmniVPipeline.cpp  OmniVPipeline.hpp  OmniVRenderer.cpp  OmniVRenderer.hpp  (+24 more)
src/RenderSystems/: OmniVPointLightRenderSystem.cpp  OmniVPointLightRenderSystem.hpp  OmniVRenderSystem.hpp  OmniVShadowmapRenderSystem.cpp  OmniVShadowmapRenderSystem.hpp  OmniVSimpleRenderSystem.cpp  OmniVSimpleRenderSystem.hpp  PointLightRenderSystem.cpp  PointLightRenderSystem.hpp  RenderSystem.hpp  ShadowmapRenderSystem.cpp  ShadowmapRenderSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp
